// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CanvasColor overview 1`] = `
<DocumentFragment>
  <div
    class="css-16yvvas-CanvasColor"
  >
    <div
      class="css-1p0irht-CanvasColor"
    >
      <div
        class="css-12gchfm-CanvasColor"
        style="display: inline-block;"
      >
        <div
          class="css-4wqjru-CanvasColor"
        >
          Primary
        </div>
      </div>
      <div
        class="css-1g6po7g-CanvasColor"
      >
        <div
          class="css-1a3w3eu-CanvasColor"
        >
          <div
            class="css-dvtztk-CanvasColor"
          >
            LORAX
            <div
              class="css-bqso1q-CanvasColor"
            >
              #ff7a59
            </div>
          </div>
          <div
            class="css-z469v7-CanvasColor"
          >
            $color-lorax
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CanvasColor palette 1`] = `
<DocumentFragment>
  <div
    class="css-217inb-FlexContainer"
  >
    <div
      class="css-16yvvas-CanvasColor"
    >
      <div
        class="css-1p0irht-CanvasColor"
      >
        <div
          class="css-12gchfm-CanvasColor"
          style="display: inline-block;"
        >
          <div
            class="css-ryd7xe-CanvasColor"
          >
            Primary
          </div>
        </div>
        <div
          class="css-1g6po7g-CanvasColor"
        >
          <div
            class="css-1a3w3eu-CanvasColor"
          >
            <div
              class="css-dvtztk-CanvasColor"
            >
              SORBET
              <div
                class="css-bqso1q-CanvasColor"
              >
                #ff8f59
              </div>
            </div>
            <div
              class="css-z469v7-CanvasColor"
            >
              $color-sorbet
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-16yvvas-CanvasColor"
    >
      <div
        class="css-1p0irht-CanvasColor"
      >
        <div
          class="css-12gchfm-CanvasColor"
          style="display: inline-block;"
        >
          <div
            class="css-1xkgbqi-CanvasColor"
          >
            Shade
          </div>
        </div>
        <div
          class="css-1g6po7g-CanvasColor"
        >
          <div
            class="css-1a3w3eu-CanvasColor"
          >
            <div
              class="css-dvtztk-CanvasColor"
            >
              SORBET_DARK
              <div
                class="css-bqso1q-CanvasColor"
              >
                #e68250
              </div>
            </div>
            <div
              class="css-z469v7-CanvasColor"
            >
              $color-sorbet-dark
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-16yvvas-CanvasColor"
    >
      <div
        class="css-1p0irht-CanvasColor"
      >
        <div
          class="css-12gchfm-CanvasColor"
          style="display: inline-block;"
        >
          <div
            class="css-hxgym3-CanvasColor"
          >
            Medium Tint
          </div>
        </div>
        <div
          class="css-1g6po7g-CanvasColor"
        >
          <div
            class="css-1a3w3eu-CanvasColor"
          >
            <div
              class="css-dvtztk-CanvasColor"
            >
              SORBET_MEDIUM
              <div
                class="css-bqso1q-CanvasColor"
              >
                #ffc7ac
              </div>
            </div>
            <div
              class="css-z469v7-CanvasColor"
            >
              $color-sorbet-medium
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-16yvvas-CanvasColor"
    >
      <div
        class="css-1p0irht-CanvasColor"
      >
        <div
          class="css-12gchfm-CanvasColor"
          style="display: inline-block;"
        >
          <div
            class="css-hzdkpl-CanvasColor"
          >
            Light Tint
          </div>
        </div>
        <div
          class="css-1g6po7g-CanvasColor"
        >
          <div
            class="css-1a3w3eu-CanvasColor"
          >
            <div
              class="css-dvtztk-CanvasColor"
            >
              SORBET_LIGHT
              <div
                class="css-bqso1q-CanvasColor"
              >
                #fff3ee
              </div>
            </div>
            <div
              class="css-z469v7-CanvasColor"
            >
              $color-sorbet-light
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
